--- a/assets/styles.css
+++ b/assets/styles.css
@@ -65,3 +65,15 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+footer p {
+    font-size: 1.2rem;
+    color: aliceblue;
+}
+
+footer a {
+    color: beige;
+    text-decoration: none;
+    font-weight: 500;
+    border-bottom: 1px solid rgb(39, 17, 14);
+}
