--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,7 +14,7 @@
 body {
   background-color: rgba(43, 186, 226, 0);
   font-family: "sedan", sans-serif;
-  color: aliceblue;
+  color: rgb(237, 167, 215);
   padding: 10px;
 }
 
@@ -22,15 +22,21 @@ h2 {
   text-align: center;
 }
 header {
-  background-color: rgb(48, 107, 155);
+  background-color: rgb(113, 24, 88);
   backdrop-filter: blur(10px);
   margin: 10px 0;
   border-radius: 6px;
   height: 150px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
+}
+
+#profile-image{
+height: 120px;
+width: 120px;
+border-radius: 50%;
 }
 
 #principal {
@@ -42,21 +48,21 @@ header {
 }
 
 main {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(181, 86, 161);
   border-radius: 6px;
   height: 100%;
   width: 74%;
 }
 
 aside {
-  background-color: rgb(29, 70, 154);
+  background-color: rgb(173, 29, 111);
   border-radius: 6px;
   height: 100%;
   width: 25%;
 }
 
 footer {
-    background-color: cadetblue;
+    background-color: rgb(209, 68, 112);
     border-radius: 6px;
     margin: 10px 0;
     height: 100px;
